# improc

./: .gitignore  CMakeLists.txt  README  design.txt  struct_of_project.txt
common/: common.hpp
doc/: design.txt  struct_of_project.txt
libraries/application/: application.cpp  application.hpp  colors.hpp  test_application.cxx
libraries/functors/: functors.cpp  functors.hpp  test_functors.cxx
libraries/repository/: repository.cpp  repository.hpp  test_repository.cxx
sources/: CMakeLists.txt  main.cpp
